@@ -78,5 +78,49 @@ class Gems_Task_Tracker_AddRefreshQuestions extends \MUtil_Task_TaskAbstract
                 $batch->addTask('Tracker_RefreshQuestion', $surveyId, $name, $order);
             }
         }
+        
+        // If we have a response database, create a view on the answers
+        if ($this->project->hasResponseDatabase()) {
+            $this->replaceCreateView($this->getViewName($survey), $answerModel);            
+        }
     }
+    
+    /**
+     * Get a name for the view
+     * 
+     * @param \Gems_Tracker_Survey $survey
+     * @return string
+     */
+    protected function getViewName(\Gems_Tracker_Survey $survey)
+    {
+        return 'T' . $survey->getSurveyId();
+    }
+    
+    /**
+     * Handles creating or replacing the view for this survey
+     * 
+     * @param string                     $viewName
+     * @param \MUtil_Model_ModelAbstract $answerModel
+     */
+    protected function replaceCreateView($viewName, \MUtil_Model_ModelAbstract $answerModel) {
+        $responseDb = $this->project->getResponseDatabase();
+        $fieldSql   = '';
+
+        foreach ($answerModel->getItemsOrdered() as $name) {
+            if (true === $answerModel->get($name, 'survey_question') && // It should be a question
+                    !in_array($name, array('submitdate', 'startdate', 'datestamp')) && // Leave out meta info
+                    !$answerModel->is($name, 'type', \MUtil_Model::TYPE_NOVALUE)) {         // Only real answers
+                $fieldSql .= ',MAX(IF(gdr_answer_id = ' . $responseDb->quote($name) . ', gdr_response, NULL)) AS ' . $responseDb->quote($name);
+            }
+        }
+
+        if ($fieldSql > '') {
+            $createViewSql = 'CREATE OR REPLACE VIEW ' . $responseDb->quote($viewName) . ' AS SELECT gdr_id_token';
+            $createViewSql .= $fieldSql;
+            $createViewSql .= "FROM gemsdata__responses join gems__tokens on (gto_id_token=gdr_id_token and gto_id_survey=" . $surveyId . ") GROUP BY gdr_id_token;";
+
+            $responseDb->query($createViewSql)->execute();
+        }
+    }
+    
 }
