@@ -1,5 +1,6 @@
 Important changes from 1.7.1 => 1.7.2
 ============================================================
+When using responsedatase views will be created for each survey
 Fixed survey activation when survey not active in source
 LimeSurvey equation questions now use help text for question or question code when empty
 The menu remains fully visible when an error occurs
